# mk_async_python

./: pyproject.toml
part 1/: 1_step_introduction.py  2_step_introduction.py
part 2/: 1_step_part_2.py  2_step_part_2.py  3_step_part_2.py  4_webscrap_part_2.py  5_bot_part_2.py  6_neuro_part_2.py  example.txt
part 3/: 1_step_part_3.py  2_step_part_3.py  3_step_part_3.py  4_step_part_3.py  5_step_part_3.py  6_step_part_3.py  7_step_part_3.py  8_step_part_3.py  9_step_part_3.py
part 4/: 1_step_part_4.py  3_step_part_4.py  4_step_part_4.py
practical experience/: chat_client.py  chat_server.py
