[tool.poetry]
name = "baseasyncasyncio"
version = "0.1.0"
description = ""
authors = ["speccy-rom <https://web-cpv.ru/>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.4"
websockets = "^10.4"
tweepy = "^4.13.0"
torch = "^2.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

